compiler/src/test/resources/amyc/parser/failing/WrongQName2.amy
module WrongQName
  abstract class Foo.bar
end WrongQName
